deploy/blazor-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: blazor-template
  labels:
    name: blazor-template
