deploy/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blazor-template-nginx
  labels:
    app: blazor-template-nginx
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
  selector:
    app: blazor-template-nginx
