deploy/blazor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blazor-template-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: blazor.staging.codegarage.ru
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: blazor-template-nginx
                port:
                  number: 80
